Debug codespace by using basic ubuntu image.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,12 @@
 {
 	"name": "Development",
-	"image": "ghcr.io/censibal/orcapod:0.1.0",
+	// "image": "ghcr.io/censibal/orcapod:0.1.0",
+	"image": "ubuntu:24.04",
 	"overrideCommand": false,
 	"workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
-	// "mounts": [
-	// 	"source=${localWorkspaceFolderBasename}_devcontainer_docker_data,target=/var/lib/docker,type=volume"
-	// ],
+	"mounts": [
+		"source=${localWorkspaceFolderBasename}_devcontainer_docker_data,target=/var/lib/docker,type=volume"
+	],
 	"remoteEnv": {
 		"RUST_BACKTRACE": "1"
 	},
