Reapply orcapod env config.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,7 @@
 {
 	"name": "Development",
-	// "image": "ghcr.io/censibal/orcapod:0.1.0",
-	"image": "ubuntu:24.04",
-	// "image": "ghcr.io/censibal/test_demo:0.1.0",
-	// "overrideCommand": false,
-	"overrideCommand": true,
+	"image": "ghcr.io/censibal/orcapod:0.1.0",
+	"overrideCommand": false,
 	"workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
 	"mounts": [
 		"source=${localWorkspaceFolderBasename}_devcontainer_docker_data,target=/var/lib/docker,type=volume"
@@ -12,8 +9,7 @@
 	"remoteEnv": {
 		"RUST_BACKTRACE": "1"
 	},
-	// "postStartCommand": "mkdir -p data_lake && docker system prune -fa && docker volume prune -f",
-	"postStartCommand": "mkdir -p data_lake",
+	"postStartCommand": "mkdir -p data_lake && docker system prune -fa && docker volume prune -f",
 	"hostRequirements": {
 		"cpus": 2,
 		"memory": "7gb",
