Disable git fetch

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,7 +29,10 @@
 				"ms-python.python", // Python IDE
 				"ms-toolsai.jupyter", // Jupyter IDE
 				"ms-python.black-formatter" // Python code formatter
-			]
+			],
+			"settings": {
+				"git.autofetch": false
+			}
 		}
 	}
 }
