update notebook path

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,7 +23,7 @@
 	"customizations": {
 		"codespaces": {
 			"openFiles": [
-			  "notebooks/demo_setup/00 - orcapod basic.ipynb"
+			  "notebooks/00 - orcapod basic.ipynb"
 			]
 		},
 		"vscode": {
